[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
mongodb = "2.7.0"
dotenv = "0.15.0"
